clusters/cluster-1/media/doubletake/doubletake-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doubletake-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx
  #tls:
  #- hosts:
  #  - "doubletake.tallflix.ca"
  #  secretName: tls-secret
  rules:
  - host: doubletake.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: double-take
            port:
              number: 3000
